--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>4.44.7</upstream.version>
-        <upstream.url>https://api.tomtom.com/maps-sdk-js/${upstream.version}/jssdk-${upstream.version}-distribution-vector.zip</upstream.url>
+        <upstream.url>https://api.tomtom.com/maps-sdk-js/${version.unsnapshot}/jssdk-${version.unsnapshot}-distribution-vector.zip</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
     </properties>
 
