--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>tomtom-vector</artifactId>
-    <version>4.44.7-SNAPSHOT</version>
+    <version>4.44.7</version>
     <name>TomTom Maps SDK</name>
     <description>TomTom Maps SDK for Web with vector maps</description>
     <url>https://developer.tomtom.com/maps-sdk-web/downloads</url>
@@ -42,7 +42,7 @@
         <url>http://github.com/webjars/tomtom-vector</url>
         <connection>scm:git:https://github.com/webjars/tomtom-vector.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/tomtom-vector.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>tomtom-vector-4.44.7</tag>
     </scm>
     
     <build>
@@ -71,13 +71,13 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <echo message="download archive"/>
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip"/>
-                                <echo message="unzip archive"/>
-                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}/unzip"/>
-                                <echo message="moving resources"/>
+                                <echo message="download archive" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
+                                <echo message="unzip archive" />
+                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}/unzip" />
+                                <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/unzip"/>
+                                    <fileset dir="${project.build.directory}/unzip" />
                                 </move>
                             </target>
                         </configuration>
